# whisper-asr-colab

./: .deepsource.toml  .gitignore  LICENSE  README.md  README_ja.md  constraints.txt  deptree.txt  pyannote3_requirements.txt  pyannote3_requirements2.txt  pyproject.toml  readme.md  readme_ja.md  requirements.txt  sonar-project.properties  whisper_asr_colab.ipynb  whisper_asr_colab_ja.ipynb
.github/workflows/: align-branch-refs.yml  ci.yml  sonarcloud.yml
benchmark/: assign_speaker_try.py  assign_speakers.py
scripts/: restore_docx.py
tests/: conftest.py  test_asr.py  test_diarize.py  test_docx_generator.py
tests/data/: asr_test.m4a  asr_test.m4a_diarized.txt  asr_test.m4a_diarized_df.json  asr_test.m4a_segments.json
whisper_asr_colab/: __init__.py  _version.py  asr.py  audio.py  diarize.py  docx_generator.py  integration.py  speakersegment.py  utils.py  worker.py
whisper_asr_colab/asr/: __init__.py  asr.py  asrworker.py  audio.py  realtime_asr.py  worker.py
whisper_asr_colab/audio/: __init__.py  audio.py  utils.py
whisper_asr_colab/common/: __init__.py  audio.py  process_isolator.py  speakersegment.py  utils.py
whisper_asr_colab/diarize/: __init__.py  diarizationworker.py  diarize.py  worker.py
whisper_asr_colab/docx_generator/: __init__.py  docx_generator.py
whisper_asr_colab/docx_generator/templete_xmls/diarized_transcription/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
whisper_asr_colab/docx_generator/templete_xmls/diarized_transcription/word/_rels/: document.xml.rels
whisper_asr_colab/docx_generator/templete_xmls/diarized_transcription/word/theme/: theme1.xml
whisper_asr_colab/speakersegment/: __init__.py  speakersegment.py  speakersegmentlist.py
whisper_asr_colab/templates/: diarized_transcription.docx
whisper_asr_colab/templete_xmls/diarized_transcription/: [Content_Types].xml
whisper_asr_colab/templete_xmls/diarized_transcription/customXml/: item1.xml  itemProps1.xml
whisper_asr_colab/templete_xmls/diarized_transcription/docProps/: app.xml  core.xml
whisper_asr_colab/templete_xmls/diarized_transcription/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
whisper_asr_colab/uvhelper/: constraint_torch2_8.txt  override_colab.txt
