[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_asr_colab"
dynamic = ["version"]

dependencies =  [
    "faster-whisper@git+https://github.com/SYSTRAN/faster-whisper.git",
    "python-docx>=1",
    "yt-dlp",
    "ffmpeg-python>=0.2",
    "numpy>=1",
    "pandas>=2",
    "pyannote.audio>=3",
    "torch>=2.1.1",
    "ctranslate2==4.4.0",
    "numba>=0.54",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "whisper_asr_colab.__version__"}

[tool.setuptools_scm]
version_file = "whisper_asr_colab/_version.py"
