[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "whisper_asr_colab"
dynamic = ["version"]

dependencies =  [
    "faster-whisper@git+https://github.com/SYSTRAN/faster-whisper.git",
    "python-docx>=1",
    "yt-dlp",
    "ffmpeg-python>=0.2",
    "numpy>=1",
    "pandas>=2",
    "pyannote.audio>=3",
    "torch>=2.1.1",
    "ctranslate2==4.4.0",
    "numba>=0.54",
]
description = "Aggregation package for speech-to-text and diarization, featuring an example implementation on Google Colab."
readme = "README.md"
license = "MIT"

[tool.hatch.version]
source = "vcs"
path = "whisper_asr_colab/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["whisper_asr_colab"]
exclude = ["whisper_asr_colab/templete_xmls/"]

[tool.hatch.build.hooks.custom]
path = "scripts/restore_docx.py"

[tool.hatch.build.targets.wheel.force-include]
"whisper_asr_colab/templates" = "whisper_asr_colab/templates"
