[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "whisper_asr_colab"
dynamic = ["version", "dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

description = "Aggregation package for speech-to-text and diarization, featuring an example implementation on Google Colab."
readme = "README.md"
license = "MIT"

[tool.hatch.version]
source = "vcs"
path = "whisper_asr_colab/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["whisper_asr_colab"]
exclude = ["whisper_asr_colab/docx_generator/templete_xmls/"]

[tool.hatch.build.hooks.custom]
path = "scripts/restore_docx.py"

[tool.hatch.build.targets.wheel.force-include]
"whisper_asr_colab/docx_generator/templates" = "whisper_asr_colab/docx_generator/templates"
